--- a/css/templates/blog.css
+++ b/css/templates/blog.css
@@ -1,12 +1,20 @@
 /* Blog post */
 
+.body-container--blog-post {
+  background-color: #F5F5F5;
+}
+
 .blog-post {
   margin: 0 auto;
   max-width: 800px;
 }
 
+.blog-post img {
+  width: 100%;
+}
+
 .blog-post__meta {
-  margin-bottom: 1.4rem;
+  margin: 2rem 0;
 }
 
 .blog-post__meta a {
