--- a/modules/featured-blog-post.module/module.css
+++ b/modules/featured-blog-post.module/module.css
@@ -1,4 +1,3 @@
-
 .featured-post {
   display: flex;
   position: relative;
@@ -26,7 +25,7 @@
 
 .featured-post-image img {
   height: 715px;
-  width: 670px;
+  width: 100%;
   object-fit: cover;
 }
 
@@ -34,6 +33,12 @@
 @media only screen and (max-width: 768px) {
   .featured-post {
     display: block;
+  }
+  .featured-post-info-container {
+    width: 100%;
+  }
+  .featured-post-info {
+    padding: 25px;
   }
   .featured-post-info,
   .featured-post-image {
