--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -14,52 +14,24 @@
 %}
 
   {# Hero banner #}
-
-  {% dnd_section
-  background_image={
-    'backgroundPosition': 'MIDDLE_CENTER',
-    'backgroundSize': 'cover',
-    'imageUrl': context.background_image || get_asset_url('../images/blog-hero-image.jpg')
-  },
-  max_width={{ context.max_width || 1400 }},
-  padding={
-    'default': {
-      'top': 140,
-      'right': 20,
-      'bottom': 160,
-      'left': 20
-    },
-    'mobile': {
-      'top': 80,
-      'right': 20,
-      'bottom': 80,
-      'left': 20
-    }
-  },
-  vertical_alignment='MIDDLE'
-%}
-    {% dnd_column %}
-      {% dnd_row %}
-        {% dnd_module
-          path='@hubspot/rich_text',
-          html='<div style="text-align: center;"><h1>News</h1><p>We’re a nonprofit, nonpartisan organization with amazing volunteers nationwide. Our solution to climate change? Democracy. And we need you on our team.</p></div>'
-        %}
-        {% end_dnd_module %}
-      {% end_dnd_row %}
-      {% dnd_row %}
-        {% dnd_module
-          path='@hubspot/blog_subscribe',
-          title=''
-        %}
-        {% end_dnd_module %}
-      {% end_dnd_row %}
-    {% end_dnd_column %}
-  {% end_dnd_section %}
+  {% include_dnd_partial path='../sections/internal-page-hero.html' %}
 
 
   {# Blog listings and pagination #}
-
-  {% dnd_section
+  {% dnd_section background_color={
+  r: 245,
+  g: 245,
+  b: 245,
+  a: 1.0
+},
+padding={
+      'mobile': {
+        'top': 10,
+        'right': 10,
+        'bottom': 10,
+        'left': 10
+      }
+      }
     vertical_alignment='TOP'
   %}
     {% dnd_column %}
