--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -9,52 +9,14 @@
 
 {% block body %}
 <div class="body-container body-container--blog-post">
+  
+  {# Hero banner #}
+  {% module "module_164028865747914" path="/Hackathon/modules/internal-page-hero" %}
 
   {# Blog post #}
 
   <div class="content-wrapper">
     <article class="blog-post">
-      {# Hero banner #}
-{% dnd_section
-background_image={
-  'backgroundPosition': 'MIDDLE_CENTER',
-  'backgroundSize': 'cover',
-  'imageUrl': context.background_image || get_asset_url('../images/blog-hero-image.jpg')
-},
-max_width={{ context.max_width || 1400 }},
-padding={
-  'default': {
-    'top': 140,
-    'right': 20,
-    'bottom': 160,
-    'left': 20
-  },
-  'mobile': {
-    'top': 80,
-    'right': 20,
-    'bottom': 80,
-    'left': 20
-  }
-},
-vertical_alignment='MIDDLE'
-%}
-  {% dnd_column %}
-    {% dnd_row %}
-      {% dnd_module
-        path='@hubspot/rich_text',
-        html='<div style="text-align: center;"><h1>News</h1><p>We’re a nonprofit, nonpartisan organization with amazing volunteers nationwide. Our solution to climate change? Democracy. And we need you on our team.</p></div>'
-      %}
-      {% end_dnd_module %}
-    {% end_dnd_row %}
-    {% dnd_row %}
-      {% dnd_module
-        path='@hubspot/blog_subscribe',
-        title=''
-      %}
-      {% end_dnd_module %}
-    {% end_dnd_row %}
-  {% end_dnd_column %}
-{% end_dnd_section %}
 
       {# Featured image #}
 
