--- a/css/components/_footer.css
+++ b/css/components/_footer.css
@@ -3,6 +3,11 @@
     background: var(--footer-background-color);
 }
 
+.footer .footer__container {
+    max-width: 100%;
+    padding: 0;
+}
+
 .footer p,
 .footer h1,
 .footer h2,
