--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -8,26 +8,62 @@
     class='footer__container content-wrapper'
   %}
 
+  {% dnd_section background_color={
+  r: 136,
+  g: 171,
+  b: 196,
+  a: 1.0
+}, padding={
+'default': {
+  'top': 0,
+  'right': 0,
+  'bottom': 0,
+  'left': 0
+},
+'mobile': {
+  'top': 0,
+  'right': 0,
+  'bottom': 0,
+  'left': 0
+}
+} %}
+    {% dnd_column padding={
+    'default': {
+      'top': 0,
+      'right': 0,
+      'bottom': 0,
+      'left': 0
+    },
+    'mobile': {
+      'top': 0,
+      'right': 0,
+      'bottom': 0,
+      'left': 0
+    }
+    } %}
+      {% dnd_row %}
+        {% dnd_column offset=0, width=6 %}
+          {% dnd_row %}
+          {% dnd_module
+          path='@hubspot/rich_text',
+          html='<div style="text-align: left;"><h3>Join the movement.</h3></div>'
+        %}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+    {% end_dnd_column %}
+    {% dnd_column offset=6, width=6 %}
+      {% dnd_row %}
+        {% dnd_module path='@hubspot/form' %}
+        {% end_dnd_module %}
+  {% end_dnd_row %}
+{% end_dnd_column %}
+      {% end_dnd_row %}
+    {% end_dnd_column %}
+  {% end_dnd_section %}
+
     {# Social follow and copyright #}
     {% dnd_section %}
       {% dnd_column %}
-        {% dnd_row %}
-          {% dnd_column offset=0, width=6 %}
-            {% dnd_row %}
-            {% dnd_module
-            path='@hubspot/rich_text',
-            html='<div style="text-align: left;"><h3>Join the movement.</h3></div>'
-          %}
-          {% end_dnd_module %}
-        {% end_dnd_row %}
-            {% end_dnd_column %}
-            {% dnd_column offset=6, width=6 %}
-              {% dnd_row %}
-                {% dnd_module path='@hubspot/form' %}
-                {% end_dnd_module %}
-            {% end_dnd_row %}
-            {% end_dnd_column %}
-        {% end_dnd_row %}
         {% dnd_row %}
           {% dnd_column
           offset=0,
@@ -125,10 +161,24 @@
     {% dnd_row %}
       {% dnd_module
       path='@hubspot/rich_text',
-      html='<div style="text-align: left; font-size: 0.7rem;"><span>© {{ year }} All rights reserved.</span></div>'
+      html='<div style="text-align: left; font-size: 0.7rem;"><span>123 Main Street Suite #123 Brooklyn, NY</span></div>'
     %}
     {% end_dnd_module %}
   {% end_dnd_row %}
+  {% dnd_row %}
+    {% dnd_module
+    path='@hubspot/rich_text',
+    html='<div style="text-align: left; font-size: 0.7rem;"><span>+1 (123) 456-7890</span></div>'
+  %}
+  {% end_dnd_module %}
+{% end_dnd_row %}
+{% dnd_row %}
+  {% dnd_module
+  path='@hubspot/rich_text',
+  html='<div style="text-align: left; font-size: 0.7rem;"><span>support@campaign.com</span></div>'
+%}
+{% end_dnd_module %}
+{% end_dnd_row %}
     {% end_dnd_column %}
         {% end_dnd_row %}
       {% end_dnd_column %}
