--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -14,7 +14,12 @@
 %}
 
   {# Hero banner #}
-  {% include_dnd_partial path='../sections/internal-page-hero.html' %}
+  {% include_dnd_partial path='../sections/internal-page-hero.html'  
+  
+  context={
+  'content': '<h1 style="text-align: center;">News</h1><p style="text-align: center;">We’re a nonprofit, nonpartisan organization with amazing volunteers nationwide. Our solution to climate change? Democracy. And we need you on our team.</p>',
+
+}%}
 
 
   {# Blog listings and pagination #}
